# const-sorted-lut

./: .pre-commit-config.yaml  Cargo.toml  README.md
src/: const_char.rs  const_cmp_i128.rs  const_cmp_i32.rs  const_cmp_i64.rs  const_cmp_i8.rs  const_cmp_isize.rs  const_cmp_u128.rs  const_cmp_u16.rs  const_cmp_u64.rs  const_cmp_usize.rs  const_i16.rs  const_str.rs  const_u32.rs  const_u8.rs  lib.rs
tests/: str.rs
